--- a/BlizzTrackVT/wwwroot/css/site.css
+++ b/BlizzTrackVT/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body {
+    background: #24282b;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -68,4 +72,28 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+.card .breadcrumb li {
+    color: #d9dada !important
+}
+
+div.view-data {
+    color: #d9dada !important
+}
+
+div.view-data:not(:last-child) {
+    margin-bottom: 5px;
+}
+
+div.view-data .row:not(:last-child) {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2); 
+}
+
+div.view-data .row .col:first-child {
+    text-align: right;
+}
+
+div.view-data .row .col:last-child {
+    font-weight: bold;
 }
