--- a/BlizzTrackVT/Pages/Privacy.cshtml
+++ b/BlizzTrackVT/Pages/Privacy.cshtml
@@ -11,7 +11,7 @@
 
     <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
-    <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in BlizzTrack. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicygenerator.info">Privacy Policy Generator</a> and the <a href="https://www.generateprivacypolicy.com/">Free Privacy Policy Generator</a>.</p>
+    <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in BlizzTrack. This policy is not applicable to any information collected offline or via channels other than this website.</p>
 
     <h2>Consent</h2>
 
@@ -28,9 +28,9 @@
     <p>We use the information we collect in various ways, including to:</p>
 
     <ul>
-        <li>Provide, operate, and maintain our webste</li>
-        <li>Improve, personalize, and expand our webste</li>
-        <li>Understand and analyze how you use our webste</li>
+        <li>Provide, operate, and maintain our website</li>
+        <li>Improve, personalize, and expand our website</li>
+        <li>Understand and analyze how you use our website</li>
         <li>Develop new products, services, features, and functionality</li>
         <li>Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the webste, and for marketing and promotional purposes</li>
         <li>Send you emails</li>
