--- a/BlizzTrackVT/Pages/Privacy.cshtml
+++ b/BlizzTrackVT/Pages/Privacy.cshtml
@@ -15,7 +15,7 @@
 
     <h2>Consent</h2>
 
-    <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms. For our Terms and Conditions, please visit the <a href="https://www.privacypolicyonline.com/terms-conditions-generator/">Terms & Conditions Generator</a>.</p>
+    <p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
 
     <h2>Information we collect</h2>
 
