no privacy policy as we don't keep information

--- a/BlizzTrackVT/Pages/Shared/_Layout.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
 <footer class="footer text-muted text-center">
     <div class="container">
-        BlizzTrack - By <a href="https://github.com/Toyz" target="_blank" rel="nofollow">Helba</a> - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        BlizzTrack - By <a href="https://github.com/Toyz" target="_blank" rel="nofollow">Helba</a>
     </div>
 </footer>
 
