minor bug fixes to history comparing... It now only compares sequenes older then the current

--- a/BlizzTrackVT/Pages/Shared/_version_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_version_config.cshtml
@@ -228,7 +228,7 @@
                 }
 
                 <div class="col-3">@nameof(item.Versionsname)</div>
-                <div class="col">@item.Versionsname</div>
+                <div class="col font-weight-bold">@item.Versionsname</div>
                 
                 @if (last != null && item.Versionsname != last.Versionsname)
                 {
@@ -253,7 +253,7 @@
                     </div>
                 }
                 <div class="col-3">@nameof(item.Productconfig)</div>
-                <div class="col">@item.Productconfig</div>
+                <div class="col font-weight-bold">@item.Productconfig</div>
 
                 @if (last != null && item.Productconfig != last.Productconfig)
                 {
