--- a/BlizzTrackVT/Pages/StatusCode.cshtml
+++ b/BlizzTrackVT/Pages/StatusCode.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model BlizzTrackVT.Pages.StatusCodeModel
 
+@{
+    ViewData["Title"] = $"Error {Model.StatusCode}";
+}
+
 <div class="text-center">
     <h1 class="text-light">Error @Model.StatusCode</h1>
     <h2 class="text-muted">@Model.Message</h2>
