--- a/BlizzTrackVT/Pages/Index.cshtml
+++ b/BlizzTrackVT/Pages/Index.cshtml
@@ -41,68 +41,70 @@
     </div>
 }
 
-@foreach (var (key, value) in Model.Games)
-{
-    <div class="card bg-dark text-light mb-1">
-        <div class="card-header text-center">
-            <h4>
-                @BNetLib.Helpers.GameName.GetGameName(key)
-            </h4>
-        </div>
-        <div class="card-body p-0">
-            <table class="table table-dark text-center mb-0" style="border-radius: .25rem;">
-                <thead>
-                <tr>
-                    <th scope="col" style="border-top: 0"><i class="fa fa-edit"></i></th>
-                    <th scope="col" style="border-top: 0">#</th>
-                    <th scope="col" style="border-top: 0">Product</th>
-                    <th scope="col" style="border-top: 0">Flags</th>
-                    <th scope="col" style="border-top: 0">Options</th>
-                </tr>
-                </thead>
-                <tbody>
-                @foreach (var item in value)
-                {
-                    if (item.Seqn <= 0)
-                    {
-                        continue;
-                    }
+<div id="game-list">
+    @foreach (var (key, value) in Model.Games)
+    {
+        <div class="card bg-dark text-light mb-1" data-game="@key">
+            <div class="card-header text-center">
+                <h4>
+                    @BNetLib.Helpers.GameName.GetGameName(key)
+                </h4>
+            </div>
+            <div class="card-body p-0">
+                <table class="table table-dark text-center mb-0" style="border-radius: .25rem;">
+                    <thead>
+                        <tr>
+                            <th scope="col" style="border-top: 0"><i class="fa fa-edit"></i></th>
+                            <th scope="col" style="border-top: 0">#</th>
+                            <th scope="col" style="border-top: 0">Product</th>
+                            <th scope="col" style="border-top: 0">Flags</th>
+                            <th scope="col" style="border-top: 0">Options</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in value)
+                        {
+                            if (item.Seqn <= 0)
+                            {
+                                continue;
+                            }
 
-                    var last = Model.PreviousSummary?.Value?.FirstOrDefault(x => x.Product == item.Product && x.Flags == item.Flags);
+                            var last = Model.PreviousSummary?.Value?.FirstOrDefault(x => x.Product == item.Product && x.Flags == item.Flags);
 
-                    <tr>
-                        <td>
-                            @if (last != null && last.Seqn != item.Seqn)
-                            {
-                                <i class="fa fa-arrow-up"></i>
-                            }
-                            else if (last == null)
-                            {
-                                <i class="fa fa-plus"></i>
-                            }
-                            else
-                            {
-                                <i class="fa fa-minus"></i>
-                            }
-                        </td>
-                        <td class="text-center">
-                            @item.Seqn
-                        </td>
-                        <td data-code="@item.Product">@BNetLib.Helpers.GameName.GetGameName(item.Product)</td>
-                        <td>@item.Flags</td>
-                        <td>
-                            <a class="btn btn-outline-light btn-sm"
-                               asp-page="/ViewGame"
-                               asp-route-Product="@item.Product"
-                               asp-route-Seqn="@item.Seqn"
-                               asp-route-File="@item.Flags">
-                                View Config
-                            </a>
-                        </td>
-                    </tr>
-                }
-                </tbody>
-            </table>
+                            <tr>
+                                <td>
+                                    @if (last != null && last.Seqn != item.Seqn)
+                                    {
+                                        <i class="fa fa-arrow-up"></i>
+                                    }
+                                    else if (last == null)
+                                    {
+                                        <i class="fa fa-plus"></i>
+                                    }
+                                    else
+                                    {
+                                        <i class="fa fa-minus"></i>
+                                    }
+                                </td>
+                                <td class="text-center">
+                                    @item.Seqn
+                                </td>
+                                <td data-code="@item.Product">@BNetLib.Helpers.GameName.GetGameName(item.Product)</td>
+                                <td>@item.Flags</td>
+                                <td>
+                                    <a class="btn btn-outline-light btn-sm"
+                                       asp-page="/ViewGame"
+                                       asp-route-Product="@item.Product"
+                                       asp-route-Seqn="@item.Seqn"
+                                       asp-route-File="@item.Flags">
+                                        View Config
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
-}
+    }
+</div>
