--- a/BlizzTrackVT/Pages/Shared/_Layout.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/lib/font-awesome/js/all.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/main.build.js" asp-append-version="true"></script>
 
 @RenderSection("Scripts", required: false)
 </body>
