Style updates and discord link

--- a/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
@@ -34,22 +34,22 @@
     <div class="card card-body view-data bg-dark text-light pt-1 pb-1">
         <div class="card-text">
             <div>
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Buildconfig)</div>
                     <div class="col">@item.Buildconfig</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Buildid)</div>
                     <div class="col">@item.Buildid</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Cdnconfig)</div>
                     <div class="col">@item.Cdnconfig</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Keyring)</div>
                     @if (item.Keyring.Length == 0 || item.Keyring == "versions")
                     {
@@ -62,17 +62,17 @@
 
                 </div>
            
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Region)</div>
                     <div class="col">@item.Region</div>
                 </div>
 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Versionsname)</div>
                     <div class="col">@item.Versionsname</div>
                 </div>
 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Productconfig)</div>
                     <div class="col">@item.Productconfig</div>
                 </div>
