--- a/BlizzTrackVT/Pages/Shared/_version_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_version_config.cshtml
@@ -62,7 +62,7 @@
     <div class="card card-body view-data bg-dark text-light pt-1 pb-1">
     <div class="card-text">
         <div>
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Buildconfig != last.Buildconfig)
                 {
                     <div>
@@ -89,7 +89,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Buildid != last.Buildid)
                 {
                     <div>
@@ -115,7 +115,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Cdnconfig != last.Cdnconfig)
                 {
                     <div>
@@ -141,7 +141,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Keyring != last.Keyring)
                 {
                     if (last.Keyring != "versions")
@@ -188,7 +188,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                     @if (last != null && item.Region != last.Region)
                     {
                         <div>
@@ -213,7 +213,7 @@
                     }
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Versionsname != last.Versionsname)
                 {
                     <div>
@@ -239,7 +239,7 @@
 
             </div>
 
-            <div class="row">
+            <div class="row p-1">
                 @if (last != null && item.Productconfig != last.Productconfig)
                 {
                     <div>
