--- a/BlizzTrackVT/Pages/Shared/_Layout.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,13 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a class="nav-link text-light" asp-area="" asp-page="/Index">
-                            <i class="fa fa-home"></i>
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="https://discord.gg/ESusd6F" target="_blank">
+                            <i class="fab fa-discord"></i>
+                            Discord
                         </a>
                     </li>
                 </ul>
@@ -53,7 +59,7 @@
 
 <footer class="footer text-muted text-center">
     <div class="container">
-        BlizzTrack - By <a href="https://github.com/Toyz" target="_blank" rel="nofollow">Helba</a>
+        BlizzTrack - By <a href="https://github.com/Toyz" target="_blank" rel="nofollow">Helba</a> - <a href="https://patch.land">PatchLand</a>
     </div>
 </footer>
 
