--- a/BlizzTrackVT/Pages/Shared/_cdn_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_cdn_config.cshtml
@@ -27,27 +27,27 @@
     <div class="card card-body view-data bg-dark text-light pt-1 pb-1">
         <div class="card-text">
             <div>
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Name)</div>
                     <div class="col">@item.Name</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Path)</div>
                     <div class="col">@item.Path</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Hosts)</div>
                     <div class="col">@item.Hosts</div>
                 </div>
                 
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.Servers)</div>
                     <div class="col">@item.Servers</div>
                 </div>
            
-                <div class="row">
+                <div class="row p-1">
                     <div class="col-3">@nameof(item.ConfigPath)</div>
                     <div class="col">@item.ConfigPath</div>
                 </div>
