--- a/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
@@ -1,82 +1,275 @@
-﻿@model BTSharedCore.Models.BGDL
+﻿@model BlizzTrackVT.Models.PartialConfigDataModel<BTSharedCore.Models.BGDL>
 
-<div class="card card-body bg-dark mb-1 p-0">
+<div class="card card-body bg-dark text-light mb-1 p-0">
     <ol class="breadcrumb bg-dark text-light text-center m-0">
         <li class="breadcrumb-item active">
-            File: <strong>
+            File: 
+            <strong>
                 BGDL
             </strong>
         </li>
         <li class="breadcrumb-item active">
-            Sequence:
+            Current Sequence:
             <strong>
-                @Model.Seqn
+                @Model.Current.Seqn
             </strong>
         </li>
         <li class="breadcrumb-item active">
             Archived:
             <strong>
-                @Model.Id?.CreationTime.ToUniversalTime() UTC
+                @Model.Current.Id?.CreationTime.ToUniversalTime() UTC
             </strong>
         </li>
     </ol>
 </div>
-    
-@if (Model.Value.Count == 0)
+
+@if (Model.Previous != null && Model.Previous?.Seqn != 0)
+{
+    <div class="card card-body bg-dark text-light mb-1 p-0">
+        <ol class="breadcrumb bg-dark text-light text-center m-0">
+            <li class="breadcrumb-item active">
+                File: 
+                <strong>
+                    BGDL
+                </strong>
+            </li>
+            <li class="breadcrumb-item active">
+                Previous Sequence:
+                <strong>
+                    <a  asp-page="/ViewGame"
+                        asp-route-Product="@Model.Current.Product"
+                        asp-route-Seqn="@Model.Previous.Seqn"
+                        asp-route-File="bgdl">
+                        @Model.Previous.Seqn
+                    </a>
+                </strong>
+            </li>
+            <li class="breadcrumb-item active">
+                Archived:
+                <strong>
+                    @Model.Previous.Id?.CreationTime.ToUniversalTime() UTC
+                </strong>
+            </li>
+        </ol>
+    </div>
+}
+
+@if (Model.Current.Value.Count == 0)
 {
     <div class="text-center alert alert-danger">
         This sequence doesn't contain any information.
     </div>
 }
 
-@foreach (var item in Model.Value)
+@foreach (var item in Model.Current.Value)
 {
+    var last = Model.Previous?.Value?.FirstOrDefault(x => x.Region == item.Region);
+
     <div class="card card-body view-data bg-dark text-light pt-1 pb-1">
-        <div class="card-text">
-            <div>
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Buildconfig)</div>
-                    <div class="col">@item.Buildconfig</div>
+    <div class="card-text">
+        <div>
+            <div class="row p-1">
+                @if (last != null && item.Buildconfig != last.Buildconfig)
+                {
+                    <div>
+                        <i class="fa fa-arrow-up"></i>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
+                <div class="col-3">@nameof(item.Buildconfig)</div>
+                <div class="col font-weight-bold">
+                    @item.Buildconfig
                 </div>
                 
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Buildid)</div>
-                    <div class="col">@item.Buildid</div>
-                </div>
+                @if (last != null && item.Buildconfig != last.Buildconfig)
+                {
+                    <div class="col text-danger">
+                        @last.Buildconfig
+                    </div>
+                }
+
+            </div>
+
+            <div class="row p-1">
+                @if (last != null && item.Buildid != last.Buildid)
+                {
+                    <div>
+                        <i class="fa fa-arrow-up"></i>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
+
+                <div class="col-3">@nameof(item.Buildid)</div>
+                <div class="col font-weight-bold">@item.Buildid</div>
                 
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Cdnconfig)</div>
-                    <div class="col">@item.Cdnconfig</div>
-                </div>
+                @if (last != null && item.Buildid != last.Buildid)
+                {
+                    <div class="col text-danger">
+                        @last.Buildid
+                    </div>
+                }
+
+            </div>
+
+            <div class="row p-1">
+                @if (last != null && item.Cdnconfig != last.Cdnconfig)
+                {
+                    <div>
+                        <i class="fa fa-arrow-up"></i>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
+
+                <div class="col-3">@nameof(item.Cdnconfig)</div>
+                <div class="col font-weight-bold">@item.Cdnconfig</div>
                 
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Keyring)</div>
-                    @if (item.Keyring.Length == 0 || item.Keyring == "versions")
+                @if (last != null && item.Cdnconfig != last.Cdnconfig)
+                {
+                    <div class="col text-danger">
+                        @last.Cdnconfig
+                    </div>
+                }
+
+            </div>
+
+            <div class="row p-1">
+                @if (last != null && item.Keyring != last.Keyring)
+                {
+                    if (last.Keyring != "versions")
                     {
-                        <div class="col">N/A</div>
+                        <div>
+                            <i class="fa fa-arrow-up"></i>
+                        </div>
                     }
                     else
                     {
-                        <div class="col">@item.Keyring</div>
+                        <div>
+                            <i class="fa fa-minus"></i>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
+
+
+                <div class="col-3">@nameof(item.Keyring)</div>
+                @if (item.Keyring.Length == 0 || item.Keyring == "versions")
+                {
+                    <div class="col font-weight-bold">N/A</div>
+                }
+                else
+                {
+                    <div class="col font-weight-bold">@item.Keyring</div>
+                }
+                
+                @if (last != null && item.Keyring != last.Keyring)
+                {
+                    if (last.Keyring != "versions")
+                    {
+                        <div class="col text-danger">
+                            @last.Keyring
+                        </div>
                     }
 
-                </div>
-           
-                <div class="row p-1">
+                }
+
+            </div>
+
+            <div class="row p-1">
+                    @if (last != null && item.Region != last.Region)
+                    {
+                        <div>
+                            <i class="fa fa-arrow-up"></i>
+                        </div>
+                    }
+                    else
+                    {
+                        <div>
+                            <i class="fa fa-minus"></i>
+                        </div>
+                    }
+
                     <div class="col-3">@nameof(item.Region)</div>
-                    <div class="col">@item.Region</div>
-                </div>
+                    <div class="col font-weight-bold">@item.Region</div>
+                    
+                    @if (last != null && item.Region != last.Region)
+                    {
+                        <div class="col text-danger">
+                            @last.Region
+                        </div>
+                    }
+            </div>
 
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Versionsname)</div>
-                    <div class="col">@item.Versionsname</div>
-                </div>
+            <div class="row p-1">
+                @if (last != null && item.Versionsname != last.Versionsname)
+                {
+                    <div>
+                        <i class="fa fa-arrow-up"></i>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
 
-                <div class="row p-1">
-                    <div class="col-3">@nameof(item.Productconfig)</div>
-                    <div class="col">@item.Productconfig</div>
-                </div>
+                <div class="col-3">@nameof(item.Versionsname)</div>
+                <div class="col font-weight-bold">@item.Versionsname</div>
+                
+                @if (last != null && item.Versionsname != last.Versionsname)
+                {
+                    <div class="col text-danger">
+                        @last.Versionsname
+                    </div>
+                }
+
+            </div>
+
+            <div class="row p-1">
+                @if (last != null && item.Productconfig != last.Productconfig)
+                {
+                    <div>
+                        <i class="fa fa-arrow-up"></i>
+                    </div>
+                }
+                else
+                {
+                    <div>
+                        <i class="fa fa-minus"></i>
+                    </div>
+                }
+                <div class="col-3">@nameof(item.Productconfig)</div>
+                <div class="col font-weight-bold">@item.Productconfig</div>
+
+                @if (last != null && item.Productconfig != last.Productconfig)
+                {
+                    <div class="col text-danger">
+                        @last.Productconfig
+                    </div>
+                }
+            </div>
             </div>
         </div>
     </div>
+    }
 }
