--- a/BlizzTrackVT/Pages/_ViewImports.cshtml
+++ b/BlizzTrackVT/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using BlizzTrackVT
+@using BNetLib.Models
+@using BTSharedCore.Models
 @namespace BlizzTrackVT.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
