bug fix for stuff

--- a/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
+++ b/BlizzTrackVT/Pages/Shared/_bgdl_config.cshtml
@@ -6,7 +6,7 @@
         You can view the latest Sequence (<strong>@Model.Latest.Seqn</strong>) by <a asp-page="/ViewGame"
                                                                                      asp-route-Product="@Model.Latest.Product"
                                                                                      asp-route-Seqn="@Model.Latest.Seqn"
-                                                                                     asp-route-File="versions">click here</a>.
+                                                                                     asp-route-File="bgdl">click here</a>.
     </div>
 }
 
