--- a/BlizzTrackVT/Pages/Index.cshtml
+++ b/BlizzTrackVT/Pages/Index.cshtml
@@ -59,7 +59,7 @@
                     @BNetLib.Helpers.GameName.GetGameName(key)
                 </h4>
             </div>
-            <div class="card-body p-0">
+            <div class="card-body p-0" style="overflow: auto">
                 <table class="table table-dark text-center mb-0" style="border-radius: .25rem;">
                     <thead>
                         <tr>
@@ -98,7 +98,16 @@
                                 <td class="text-center">
                                     @item.Seqn
                                 </td>
-                                <td data-code="@item.Product">@BNetLib.Helpers.GameName.GetGameName(item.Product)</td>
+                                <td data-code="@item.Product">
+                                    <span class="d-none d-md-block">
+                                        @BNetLib.Helpers.GameName.GetGameName(item.Product)
+                                        <Br />
+                                        <span class="text-muted">@item.Product</span>
+                                    </span>
+                                    <span class="d-block d-md-none">
+                                        @item.Product
+                                    </span>
+                                </td>
                                 <td>@item.Flags</td>
                                 <td>
                                     <a class="btn btn-outline-light btn-sm"
@@ -106,7 +115,12 @@
                                        asp-route-Product="@item.Product"
                                        asp-route-Seqn="@item.Seqn"
                                        asp-route-File="@item.Flags">
-                                        View Config
+                                        <span class="d-none d-md-block">
+                                            View Config
+                                        </span>
+                                        <span class="d-block d-md-none">
+                                            View
+                                        </span>
                                     </a>
                                 </td>
                             </tr>
